extends Node
class_name PVPZoneManager
# pvp_zone_manager.gd - Manages PVP zones and combat simulation

# Zone states
enum ZoneType { SAFE, PVP, NEUTRAL }

# Current zone tracking
var current_zone: ZoneType = ZoneType.SAFE
var player_in_pvp: bool = false

# PVP simulation settings
var pvp_damage_multiplier: float = 1.5
var pvp_cooldown_reduction: float = 0.8
var safe_zone_heal_rate: float = 2.0

# Zone timers
var pvp_protection_timer: Timer
var safe_zone_timer: Timer

# UI references
@onready var status_label: Label
var zone_transition_popup: PackedScene

func _ready():
	print("[PVPZone] PVP Zone Manager initialized")
	setup_zone_manager()
	setup_timers()
	connect_signals()
	update_zone_status()

func setup_zone_manager():
# Initialize zone management system
	# Find UI elements
	status_label = get_tree().current_scene.find_child("PVPStatus")
	
	# Load zone transition popup if available
	var popup_path = "res://ui/popup_notification.tscn"
	if ResourceLoader.exists(popup_path):
		zone_transition_popup = load(popup_path)

func setup_timers():
# Setup zone-related timers
	# PVP protection timer (prevents immediate re-entering PVP)
	pvp_protection_timer = Timer.new()
	pvp_protection_timer.name = "PVPProtectionTimer"
	pvp_protection_timer.one_shot = true
	pvp_protection_timer.wait_time = 5.0
	add_child(pvp_protection_timer)
	
	# Safe zone regeneration timer
	safe_zone_timer = Timer.new()
	safe_zone_timer.name = "SafeZoneTimer"
	safe_zone_timer.timeout.connect(_on_safe_zone_tick)
	safe_zone_timer.wait_time = 1.0
	add_child(safe_zone_timer)

func connect_signals():
# Connect to game events
	# Combat events
	EventBus.damage_dealt.connect(_on_damage_dealt)
	EventBus.player_health_changed.connect(_on_player_health_changed)
	
	# Zone transition events (custom for PVP system)
	if not EventBus.has_signal("pvp_zone_entered"):
		EventBus.add_user_signal("pvp_zone_entered")
		EventBus.add_user_signal("pvp_zone_exited")
		EventBus.add_user_signal("safe_zone_entered")
		EventBus.add_user_signal("safe_zone_exited")

func _on_pvp_zone_entered(body):
# Handle player entering PVP zone
	if body.name == "Player" and not pvp_protection_timer.time_left > 0:
		enter_pvp_zone()

func _on_pvp_zone_exited(body):
# Handle player exiting PVP zone
	if body.name == "Player":
		exit_pvp_zone()

func _on_safe_zone_entered(body):
# Handle player entering safe zone
	if body.name == "Player":
		enter_safe_zone()

func _on_safe_zone_exited(body):
# Handle player exiting safe zone
	if body.name == "Player":
		exit_safe_zone()

func enter_pvp_zone():
# Enter PVP zone with effects
	if current_zone == ZoneType.PVP:
		return
	
	current_zone = ZoneType.PVP
	player_in_pvp = true
	
	print("[PVPZone] Player entered PVP zone")
	
	# Stop safe zone healing
	safe_zone_timer.stop()
	
	# Apply PVP modifications
	apply_pvp_modifiers()
	
	# Show zone transition effect
	show_zone_transition("Entering PVP Zone!", Color.RED)
	
	# Emit event
	EventBus.pvp_zone_entered.emit()
	
	# Update UI
	update_zone_status()

func exit_pvp_zone():
# Exit PVP zone
	if current_zone != ZoneType.PVP:
		return
	
	current_zone = ZoneType.NEUTRAL
	player_in_pvp = false
	
	print("[PVPZone] Player exited PVP zone")
	
	# Remove PVP modifications
	remove_pvp_modifiers()
	
	# Start protection timer
	pvp_protection_timer.start()
	
	# Show zone transition effect
	show_zone_transition("Left PVP Zone", Color.YELLOW)
	
	# Emit event
	EventBus.pvp_zone_exited.emit()
	
	# Update UI
	update_zone_status()

func enter_safe_zone():
# Enter safe zone with healing
	if current_zone == ZoneType.SAFE:
		return
	
	current_zone = ZoneType.SAFE
	player_in_pvp = false
	
	print("[PVPZone] Player entered safe zone")
	
	# Start safe zone healing
	safe_zone_timer.start()
	
	# Remove any PVP modifiers
	remove_pvp_modifiers()
	
	# Show zone transition effect
	show_zone_transition("Entering Safe Zone", Color.BLUE)
	
	# Emit event
	EventBus.safe_zone_entered.emit()
	
	# Update UI
	update_zone_status()

func exit_safe_zone():
# Exit safe zone
	if current_zone != ZoneType.SAFE:
		return
	
	current_zone = ZoneType.NEUTRAL
	
	print("[PVPZone] Player exited safe zone")
	
	# Stop safe zone healing
	safe_zone_timer.stop()
	
	# Show zone transition effect
	show_zone_transition("Left Safe Zone", Color.YELLOW)
	
	# Emit event
	EventBus.safe_zone_exited.emit()
	
	# Update UI
	update_zone_status()

func apply_pvp_modifiers():
# Apply PVP zone combat modifiers
	var player = get_player()
	if not player:
		return
	
	# Apply damage multiplier
	if player.has_method("set_damage_multiplier"):
		player.set_damage_multiplier(pvp_damage_multiplier)
	
	# Apply cooldown reduction
	if player.has_method("set_cooldown_multiplier"):
		player.set_cooldown_multiplier(pvp_cooldown_reduction)
	
	# TODO: Additional PVP modifiers
	# - Increased movement speed
	# - Different skill effects
	# - Resource regeneration changes

func remove_pvp_modifiers():
# Remove PVP zone combat modifiers
	var player = get_player()
	if not player:
		return
	
	# Reset damage multiplier
	if player.has_method("set_damage_multiplier"):
		player.set_damage_multiplier(1.0)
	
	# Reset cooldown multiplier
	if player.has_method("set_cooldown_multiplier"):
		player.set_cooldown_multiplier(1.0)

func _on_safe_zone_tick():
# Handle safe zone regeneration tick
	if current_zone == ZoneType.SAFE:
		var player = get_player()
		if player and player.has_method("heal"):
			var heal_amount = int(safe_zone_heal_rate)
			if heal_amount > 0:
				player.heal(heal_amount)
				show_heal_effect(heal_amount)

func show_heal_effect(amount: int):
# Show healing effect in safe zone
	var player = get_player()
	if player and zone_transition_popup:
		var popup = zone_transition_popup.instantiate()
		popup.setup_notification("+" + str(amount) + " HP", "heal", 1.5)
		popup.position = player.global_position + Vector2(0, -30)
		get_tree().current_scene.add_child(popup)

func show_zone_transition(message: String, color: Color):
# Show zone transition notification
	if zone_transition_popup:
		var popup = zone_transition_popup.instantiate()
		popup.setup_notification(message, "info", 2.0)
		
		# Position at screen center
		var screen_center = get_viewport().size / 2
		popup.position = screen_center - popup.size / 2
		
		get_tree().current_scene.add_child(popup)
	
	# Also show in UI if available
	EventBus.show_notification(message, "info")

func update_zone_status():
# Update zone status display
	if status_label:
		var status_text = ""
		match current_zone:
			ZoneType.SAFE:
				status_text = "Status: Safe Zone (Regenerating)"
			ZoneType.PVP:
				status_text = "Status: PVP Zone (Combat Enabled)"
			ZoneType.NEUTRAL:
				status_text = "Status: Neutral Zone"
		
		if pvp_protection_timer.time_left > 0:
			status_text += " [Protected: " + str(int(pvp_protection_timer.time_left)) + "s]"
		
		status_label.text = status_text

func _process(delta):
# Update zone status display
	update_zone_status()

func get_player() -> Node:
# Get reference to player node
	return get_tree().get_first_node_in_group("player")

# Signal handlers
func _on_damage_dealt(attacker: Node, target: Node, amount: int, damage_type: String):
# Handle damage dealt in zones
	if attacker.name == "Player" and current_zone == ZoneType.PVP:
		# PVP damage bonus is already applied through modifiers
		show_pvp_damage_effect(target, amount)

func _on_player_health_changed(new_health: int):
# Handle player health changes
	# Could add special effects or warnings here
	pass

func show_pvp_damage_effect(target: Node, damage: int):
# Show special PVP damage effects
	if zone_transition_popup:
		var popup = zone_transition_popup.instantiate()
		popup.setup_notification(str(damage), "damage", 1.0)
		popup.position = target.global_position
		get_tree().current_scene.add_child(popup)

# Zone validation and rules
func can_use_item_in_zone(item_id: String) -> bool:
# Check if item can be used in current zone
	var item_data = DataLoader.get_item(item_id)
	if not item_data:
		return true
	
	# Some items might be restricted in PVP zones
	if current_zone == ZoneType.PVP:
		var restricted_items = ["teleport_scroll", "invincibility_potion"]
		if item_id in restricted_items:
			EventBus.show_notification("Cannot use " + item_data.name + " in PVP zone", "warning")
			return false
	
	return true

func can_cast_spell_in_zone(spell_id: String) -> bool:
# Check if spell can be cast in current zone
	# Safe zones might restrict offensive spells
	if current_zone == ZoneType.SAFE:
		var spell_data = DataLoader.get_spell(spell_id)
		if spell_data and spell_data.get("type") == "offensive":
			EventBus.show_notification("Cannot cast offensive spells in safe zone", "warning")
			return false
	
	return true

func get_zone_combat_multiplier() -> float:
# Get combat multiplier for current zone
	match current_zone:
		ZoneType.PVP:
			return pvp_damage_multiplier
		ZoneType.SAFE:
			return 0.0  # No combat damage in safe zones
		_:
			return 1.0

func is_pvp_zone() -> bool:
# Check if currently in PVP zone
	return current_zone == ZoneType.PVP

func is_safe_zone() -> bool:
# Check if currently in safe zone
	return current_zone == ZoneType.SAFE

func get_protection_time_remaining() -> float:
# Get remaining PVP protection time
	return pvp_protection_timer.time_left

# Zone configuration
func configure_zone(zone_config: Dictionary):
# Configure zone with custom settings
	if zone_config.has("pvp_damage_multiplier"):
		pvp_damage_multiplier = zone_config.pvp_damage_multiplier
	
	if zone_config.has("pvp_cooldown_reduction"):
		pvp_cooldown_reduction = zone_config.pvp_cooldown_reduction
	
	if zone_config.has("safe_zone_heal_rate"):
		safe_zone_heal_rate = zone_config.safe_zone_heal_rate
	
	print("[PVPZone] Zone configured with custom settings")

# Future multiplayer hooks
func simulate_other_players():
# Simulate other players for testing
	# TODO: Create AI players that simulate PVP opponents
	pass

func handle_player_vs_player_combat(player1: Node, player2: Node):
# Handle combat between players (future multiplayer)
	# TODO: Implement player vs player combat mechanics
	pass

func sync_zone_state_with_server():
# Sync zone state with multiplayer server (future)
	# TODO: Implement server synchronization
	pass

# TODO: Future enhancements
# - Guild vs Guild zones
# - Faction-based PVP zones
# - Zone control and territory mechanics
# - PVP ranking and rewards system
# - Seasonal PVP events
# - Zone-specific abilities and items
